--- a/UI/assets/styles/main.css
+++ b/UI/assets/styles/main.css
@@ -125,7 +125,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: var(--color-black);
   backdrop-filter: blur(5px);
   z-index: 4444;
 }
@@ -239,7 +239,9 @@ header {
   color: var(--color-black);
 }
 
-.flex, .flex-row, .flex-column {
+.flex,
+.flex-row,
+.flex-column {
   display: flex;
 }
 .flex-column {
@@ -395,7 +397,7 @@ p {
     align-items: center;
   }
   #headline .headline .headline-picture-container,
-#headline .headline .headline-text-container {
+  #headline .headline .headline-text-container {
     max-width: 50%;
     text-align: left;
     align-self: flex-start;
@@ -423,7 +425,11 @@ p {
   margin-top: 5rem;
 }
 
-.button, .button-secondary-inverse, .button-secondary, .button-primary-inverse, .button-primary {
+.button,
+.button-secondary-inverse,
+.button-secondary,
+.button-primary-inverse,
+.button-primary {
   background: var(--color-secondary);
   color: var(--color-white) !important;
   padding: 0.5rem 1.5rem;
@@ -433,7 +439,11 @@ p {
   font-size: 1.2rem;
   cursor: pointer;
 }
-.button a, .button-secondary-inverse a, .button-secondary a, .button-primary-inverse a, .button-primary a {
+.button a,
+.button-secondary-inverse a,
+.button-secondary a,
+.button-primary-inverse a,
+.button-primary a {
   color: var(--color-white);
   text-decoration: none;
 }
@@ -463,7 +473,11 @@ p {
   background-color: transparent;
   border: 1px solid var(--color-secondary);
 }
-.button:hover, .button-primary:hover, .button-primary-inverse:hover, .button-secondary:hover, .button-secondary-inverse:hover {
+.button:hover,
+.button-primary:hover,
+.button-primary-inverse:hover,
+.button-secondary:hover,
+.button-secondary-inverse:hover {
   background: rgba(var(--color-primary), 0.1);
   border: 1px solid var(--color-primary);
 }
