--- a/UI/assets/styles/main.css
+++ b/UI/assets/styles/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap");
 section {
   padding: 1rem auto;
 }
@@ -239,9 +239,7 @@ header {
   color: var(--color-black);
 }
 
-.flex,
-.flex-row,
-.flex-column {
+.flex, .flex-row, .flex-column {
   display: flex;
 }
 .flex-column {
@@ -359,11 +357,14 @@ h4 {
 h5 {
   font-size: 1.2rem;
   margin: 0.5rem 0px;
+  font-weight: 300;
 }
 
 p {
   font-size: 1rem;
+  line-height: 1.5rem;
   margin: 0.4rem 0px;
+  font-weight: 200;
 }
 
 #headline .headline {
@@ -397,7 +398,7 @@ p {
     align-items: center;
   }
   #headline .headline .headline-picture-container,
-  #headline .headline .headline-text-container {
+#headline .headline .headline-text-container {
     max-width: 50%;
     text-align: left;
     align-self: flex-start;
@@ -425,11 +426,7 @@ p {
   margin-top: 5rem;
 }
 
-.button,
-.button-secondary-inverse,
-.button-secondary,
-.button-primary-inverse,
-.button-primary {
+.button, .button-secondary-inverse, .button-secondary, .button-primary-inverse, .button-primary {
   background: var(--color-secondary);
   color: var(--color-white) !important;
   padding: 0.5rem 1.5rem;
@@ -439,11 +436,7 @@ p {
   font-size: 1.2rem;
   cursor: pointer;
 }
-.button a,
-.button-secondary-inverse a,
-.button-secondary a,
-.button-primary-inverse a,
-.button-primary a {
+.button a, .button-secondary-inverse a, .button-secondary a, .button-primary-inverse a, .button-primary a {
   color: var(--color-white);
   text-decoration: none;
 }
@@ -473,11 +466,7 @@ p {
   background-color: transparent;
   border: 1px solid var(--color-secondary);
 }
-.button:hover,
-.button-primary:hover,
-.button-primary-inverse:hover,
-.button-secondary:hover,
-.button-secondary-inverse:hover {
+.button:hover, .button-primary:hover, .button-primary-inverse:hover, .button-secondary:hover, .button-secondary-inverse:hover {
   background: rgba(var(--color-primary), 0.1);
   border: 1px solid var(--color-primary);
 }
@@ -491,6 +480,10 @@ p {
 }
 .button-group .btn {
   margin: 0.5rem;
+}
+
+a {
+  font-weight: 300;
 }
 
 /*# sourceMappingURL=main.css.map */
