ft: add contact me page

--- a/UI/assets/styles/main.css
+++ b/UI/assets/styles/main.css
@@ -93,7 +93,8 @@ a.silent {
 }
 
 .py-1 {
-  padding: 1.5rem auto;
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 
 .py-2 {
@@ -476,9 +477,17 @@ textarea {
   color: inherit;
   padding: 0.5rem;
   resize: none;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+  margin: 0.2rem 0px;
+  outline: none;
+  border: 1px solid var(--color-gray);
 }
 input.control,
 textarea.control {
   width: 100%;
+}
+input:active, input:focus,
+textarea:active,
+textarea:focus {
+  outline: 2px solid var(--color-primary);
 }
