--- a/UI/assets/styles/main.css
+++ b/UI/assets/styles/main.css
@@ -93,8 +93,8 @@ a.silent {
 }
 
 .py-1 {
-  margin-top: 1rem !important;
-  margin-bottom: 1rem !important;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
 
 .py-2 {
@@ -138,13 +138,13 @@ a.silent {
 /* width */
 ::-webkit-scrollbar {
   width: 0.5rem !important;
-  height: 0.5rem;
+  height: 0.3rem;
   border-radius: 4px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: var(--color-black);
+  background: transparent;
 }
 
 /* Handle */
@@ -290,6 +290,7 @@ header {
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .card .text-container {
   padding: 2rem 1rem;
@@ -334,6 +335,9 @@ header {
 .horizontal-scroll {
   overflow-x: auto;
   max-width: 100%;
+}
+.horizontal-scroll ::-webkit-scrollbar {
+  display: none !important;
 }
 
 .width-full {
@@ -471,14 +475,21 @@ footer .social-media-links li a:hover {
   color: var(--color-primary);
 }
 
+section:nth-child(even) {
+  background-color: var(--color-black);
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
 input,
 textarea {
   background: transparent;
   color: inherit;
-  padding: 0.5rem;
+  padding: 1rem;
+  font-size: 1rem;
   resize: none;
   border-radius: 0.5rem;
-  margin: 0.2rem 0px;
+  margin: 0.5rem 0px;
   outline: none;
   border: 1px solid var(--color-gray);
 }
@@ -486,8 +497,10 @@ input.control,
 textarea.control {
   width: 100%;
 }
-input:active, input:focus,
-textarea:active,
-textarea:focus {
+input:hover input:active, input:focus,
+input:hover textarea:active,
+textarea:focus,
+textarea:hover input:active,
+textarea:hover textarea:active {
   outline: 2px solid var(--color-primary);
 }
