--- a/UI/assets/styles/main.css
+++ b/UI/assets/styles/main.css
@@ -5,6 +5,7 @@
   --color-black: #333333;
   --color-dark: #222;
   --color-white: #ffffff;
+  --color-danger: darkred;
   --color-transparent: rgba(0, 0, 0, 0);
   font-size: 14px;
 }
@@ -108,8 +109,13 @@ a.silent {
 }
 
 .px-2 {
-  padding-right: 3rem !important;
-  padding-left: 3rem !important;
+  padding-right: 2rem !important;
+  padding-left: 2rem !important;
+}
+
+.px-1 {
+  padding-right: 1rem !important;
+  padding-left: 1rem !important;
 }
 
 .px-3 {
@@ -133,6 +139,10 @@ a.silent {
 
 .mb-2 {
   margin-bottom: 2rem;
+}
+
+.mr-1 {
+  margin-right: 1rem;
 }
 
 /* width */
@@ -397,7 +407,7 @@ header {
   opacity: 1;
 }
 
-.button, .button-secondary-inverse, .button-secondary, .button-primary-inverse, .button-primary {
+.button, .button-danger-inverse, .button-danger, .button-primary-inverse, .button-primary {
   background: var(--color-primary);
   color: var(--color-white);
   padding: 0.5rem 1.5rem;
@@ -407,7 +417,7 @@ header {
   font-size: 1.2rem;
   cursor: pointer;
 }
-.button a, .button-secondary-inverse a, .button-secondary a, .button-primary-inverse a, .button-primary a {
+.button a, .button-danger-inverse a, .button-danger a, .button-primary-inverse a, .button-primary a {
   color: var(--color-white);
   text-decoration: none;
 }
@@ -418,6 +428,10 @@ header {
 .button-primary a {
   color: var(--color-gray);
 }
+.button-primary:hover {
+  background: rgba(var(--color-primary), 0.1);
+  border: 1px solid var(--color-primary);
+}
 .button-primary-inverse {
   background-color: transparent;
   border: 1px solid var(--color-primary);
@@ -426,20 +440,19 @@ header {
 .button-primary-inverse a {
   color: var(--color-primary);
 }
-.button-secondary {
-  background-color: var(--color-);
+.button-danger {
+  background-color: var(--color-danger);
   color: var(--color-gray);
 }
-.button-secondary a {
+.button-danger a {
   color: var(--color-gray);
 }
-.button-secondary-inverse {
+.button-danger-inverse {
   background-color: transparent;
-  border: 1px solid var(--color-primary);
+  border: 1px solid var(--color-danger);
 }
-.button:hover, .button-primary:hover, .button-primary-inverse:hover, .button-secondary:hover, .button-secondary-inverse:hover {
-  background: rgba(var(--color-primary), 0.1);
-  border: 1px solid var(--color-primary);
+.button-danger-inverse:hover {
+  background-color: var(--color-danger);
 }
 
 .button-group {
