--- a/UI/assets/styles/admin/main.css
+++ b/UI/assets/styles/admin/main.css
@@ -25,11 +25,10 @@ footer {
 }
 
 #sidebar {
-  max-width: 30%;
+  max-width: 80%;
   position: relative;
   overflow: hidden;
   height: calc(100vh - 6rem);
-  min-width: 20rem !important;
 }
 #sidebar .info {
   padding: 0.5rem;
@@ -51,20 +50,28 @@ footer {
   margin: 0.1rem !important;
 }
 #sidebar #sidebar-wrapper {
+  display: flex;
   margin-top: 0.5rem;
   padding: 1rem;
+  background: rgba(51, 51, 51, 0.5);
+  backdrop-filter: blur(5px);
   overflow-y: auto;
   z-index: 5000;
-  background-color: var(--color-black);
   height: calc(100vh - 6rem);
   width: inherit;
-  max-width: 20rem;
-  width: 100%;
   position: fixed;
   list-style: none;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+}
+#sidebar #sidebar-wrapper > :not(#sidebar-toggler) {
+  width: 0px;
+  display: none;
+}
+#sidebar #sidebar-wrapper.active > :not(#sidebar-toggler) {
+  width: auto;
+  display: block;
 }
 #sidebar #sidebar-wrapper li.menu-list-item {
   margin: 0px;
@@ -75,12 +82,23 @@ footer {
 #sidebar #sidebar-wrapper li.menu-list-item:hover .dropdown {
   display: block;
 }
+@media (min-width: 768px) {
+  #sidebar {
+    min-width: 20rem !important;
+    max-width: 30%;
+  }
+}
 
 .admin-content {
-  max-width: 70%;
-  flex: 1;
+  max-width: 100%;
+  width: 100%;
   background: transparent !important;
   padding: 2rem 2rem !important;
+}
+@media (min-width: 768px) {
+  .admin-content {
+    width: 70% !important;
+  }
 }
 
 .comment {
@@ -93,14 +111,18 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.comment div.comment-wrapper .vote,
 .comment div.comment-wrapper .comment-body {
-  padding: 0px 1rem;
+  padding: 0.5rem 1rem;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
-.comment div.comment-wrapper .vote .comment-body-header,
+.comment div.comment-wrapper .comment-body .name,
+.comment div.comment-wrapper .comment-body .avatar,
+.comment div.comment-wrapper .comment-body .date {
+  margin-right: 0.3rem;
+  align-self: center;
+}
 .comment div.comment-wrapper .comment-body .comment-body-header {
   flex: 1;
   width: 100%;
@@ -108,23 +130,12 @@ footer {
   justify-content: space-between;
   align-items: center;
 }
-.comment div.comment-wrapper .vote .comment-body-header .user,
 .comment div.comment-wrapper .comment-body .comment-body-header .user {
   flex: 1;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
-.comment div.comment-wrapper .vote .comment-body-header .user .name,
-.comment div.comment-wrapper .vote .comment-body-header .user .avatar,
-.comment div.comment-wrapper .vote .comment-body-header .user .date,
-.comment div.comment-wrapper .comment-body .comment-body-header .user .name,
-.comment div.comment-wrapper .comment-body .comment-body-header .user .avatar,
-.comment div.comment-wrapper .comment-body .comment-body-header .user .date {
-  margin-right: 0.3rem;
-  align-self: center;
-}
-.comment div.comment-wrapper .vote .comment-body-header .user .avatar,
 .comment div.comment-wrapper .comment-body .comment-body-header .user .avatar {
   display: flex;
   align-items: center;
@@ -136,4 +147,12 @@ footer {
   max-height: 2rem;
   border-radius: 50%;
   text-align: center;
+}
+
+.card:nth-last-child(1) {
+  margin-right: 0px;
+}
+
+.flex-between {
+  justify-content: space-between;
 }
