--- a/UI/assets/styles/admin/main.css
+++ b/UI/assets/styles/admin/main.css
@@ -25,36 +25,15 @@ footer {
 }
 
 #sidebar {
-  max-width: 80%;
+  max-width: 3rem;
   position: relative;
   overflow: hidden;
   height: calc(100vh - 6rem);
-}
-#sidebar .info {
-  padding: 0.5rem;
-  display: inline;
-  margin-bottom: 3rem;
-}
-#sidebar .info .color-primary {
-  display: inline;
-}
-#sidebar li {
-  list-style: none;
-  padding: 0.5rem;
-  cursor: pointer;
-}
-#sidebar .tags {
-  display: inline;
-}
-#sidebar .tags span {
-  margin: 0.1rem !important;
 }
 #sidebar #sidebar-wrapper {
   display: flex;
   margin-top: 0.5rem;
   padding: 1rem;
-  background: rgba(51, 51, 51, 0.5);
-  backdrop-filter: blur(5px);
   overflow-y: auto;
   z-index: 5000;
   height: calc(100vh - 6rem);
@@ -69,17 +48,35 @@ footer {
   width: 0px;
   display: none;
 }
+#sidebar #sidebar-wrapper.active {
+  max-width: 20rem;
+  width: 100%;
+  background: var(--color-black);
+}
 #sidebar #sidebar-wrapper.active > :not(#sidebar-toggler) {
   width: auto;
   display: block;
 }
-#sidebar #sidebar-wrapper li.menu-list-item {
+#sidebar #sidebar-wrapper .info {
+  padding: 0.5rem;
+  display: inline;
+  margin-bottom: 3rem;
+}
+#sidebar #sidebar-wrapper .info .color-primary {
+  display: inline;
+}
+#sidebar #sidebar-wrapper li {
+  list-style: none;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+#sidebar #sidebar-wrapper .menu-list-item {
   margin: 0px;
 }
-#sidebar #sidebar-wrapper li.menu-list-item .dropdown {
+#sidebar #sidebar-wrapper .menu-list-item .dropdown {
   display: none;
 }
-#sidebar #sidebar-wrapper li.menu-list-item:hover .dropdown {
+#sidebar #sidebar-wrapper .menu-list-item:hover .dropdown {
   display: block;
 }
 @media (min-width: 768px) {
@@ -87,56 +84,65 @@ footer {
     min-width: 20rem !important;
     max-width: 30%;
   }
+  #sidebar #sidebar-wrapper.active {
+    background: var(--color-black);
+  }
+  #sidebar.active {
+    min-width: 2rem !important;
+  }
 }
 
-.admin-content {
+section#admin-content {
   max-width: 100%;
   width: 100%;
   background: transparent !important;
   padding: 2rem 2rem !important;
 }
 @media (min-width: 768px) {
-  .admin-content {
-    width: 70% !important;
+  section#admin-content {
+    max-width: calc(70% - 3rem);
+  }
+  section#admin-content.active {
+    max-width: calc(100% - 3rem);
+    flex: 1 !important;
   }
 }
 
 .comment {
   padding: 0.5rem 0px;
 }
-.comment div.comment-wrapper {
+.comment .comment-wrapper {
   background-color: var(--color-black);
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.7);
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-.comment div.comment-wrapper .comment-body {
+.comment .comment-wrapper .comment-body {
   padding: 0.5rem 1rem;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
-.comment div.comment-wrapper .comment-body .name,
-.comment div.comment-wrapper .comment-body .avatar,
-.comment div.comment-wrapper .comment-body .date {
+.comment .comment-wrapper .comment-body .name,
+.comment .comment-wrapper .comment-body .date {
   margin-right: 0.3rem;
   align-self: center;
 }
-.comment div.comment-wrapper .comment-body .comment-body-header {
+.comment .comment-wrapper .comment-body .comment-body-header {
   flex: 1;
   width: 100%;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-.comment div.comment-wrapper .comment-body .comment-body-header .user {
+.comment .comment-wrapper .comment-body .comment-body-header .user {
   flex: 1;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
-.comment div.comment-wrapper .comment-body .comment-body-header .user .avatar {
+.comment .comment-wrapper .comment-body .comment-body-header .user .avatar {
   display: flex;
   align-items: center;
   justify-content: center;
