--- a/UI/assets/styles/main.css
+++ b/UI/assets/styles/main.css
@@ -5,9 +5,9 @@
   --color-black: #333333;
   --color-dark: #222;
   --color-white: #ffffff;
-  --color-danger: darkred;
+  --color-danger: rgb(177, 19, 19);
   --color-transparent: rgba(0, 0, 0, 0);
-  font-size: 14px;
+  font-size: 16px;
 }
 
 * {
@@ -27,7 +27,8 @@ html {
 }
 
 section {
-  padding: 1rem auto;
+  padding: 3rem auto;
+  min-height: 100vh !important;
 }
 
 img {
@@ -371,6 +372,11 @@ header {
   text-align: left;
 }
 
+/* --------*/
+.text-5 {
+  font-size: 2.5rem;
+}
+
 .mh-80 {
   min-height: 80vh;
 }
@@ -490,8 +496,8 @@ footer .social-media-links li a:hover {
 
 section:nth-child(even) {
   background-color: var(--color-black);
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 input,
