--- a/UI/assets/styles/home.css
+++ b/UI/assets/styles/home.css
@@ -30,14 +30,18 @@
   }
 }
 
-.terminal {
+.sostene-terminal {
+  font-weight: 200;
+  display: flex;
+  flex-direction: column;
   transition: 0.2s ease-in-out;
   min-height: 20rem;
   background-color: var(--color-black);
   width: 100%;
-  border-radius: 2.1rem;
+  border-radius: 1rem;
+  resize: both !important;
 }
-.terminal.closed {
+.sostene-terminal.closed {
   position: fixed;
   height: auto;
   padding: 0px;
@@ -46,36 +50,52 @@
   z-index: 5000;
   bottom: 0px;
   right: 0px;
+  min-height: auto;
 }
-.terminal.closed > * {
+.sostene-terminal.closed .terminal-body {
   display: none;
 }
-.terminal.closed .titlebar {
+.sostene-terminal.closed .titlebar {
   display: flex !important;
 }
-.terminal.maximized {
+.sostene-terminal.closed .titlebar .terminal-close {
+  display: none;
+}
+.sostene-terminal.maximized {
   position: fixed;
-  top: 2rem;
-  bottom: 2rem;
-  right: 2rem;
-  left: 2rem;
-  z-index: 5000;
+  top: -80px;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+  height: 100vh;
+  z-index: 7000;
   backdrop-filter: blur(10px);
   background-color: rgba(0, 0, 0, 0.8);
 }
-.terminal #terminal-maximize {
-  background: greenyellow;
+.sostene-terminal .terminal-maximize {
+  background: greenyellow !important;
 }
-.terminal #terminal-minimize {
-  background: yellow;
+.sostene-terminal .terminal-minimize {
+  background: yellow !important;
 }
-.terminal #terminal-close {
-  background: red;
+.sostene-terminal .terminal-close {
+  background: red !important;
 }
-.terminal .titlebar {
-  padding: 0.8rem 2.1rem;
+.sostene-terminal .titlebar {
+  padding: 0.8rem 1rem;
 }
-.terminal ul li {
+.sostene-terminal .terminal-body {
+  padding: 0px 1rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.sostene-terminal ul.action {
+  display: flex;
+}
+.sostene-terminal ul.action li {
   list-style: none;
   width: 1rem;
   height: 1rem;
@@ -90,12 +110,15 @@
   cursor: pointer;
   color: black;
 }
-
-#terminal-input,
-#terminal-input:active,
-#terminal-input:focus {
+.sostene-terminal .terminal-input {
+  font-family: inherit;
+}
+.sostene-terminal .terminal-input,
+.sostene-terminal .terminal-input:active,
+.sostene-terminal .terminal-input:focus {
+  width: 100%;
+  flex: 1;
   padding: 0px;
-  width: auto;
   border: none;
   outline: none;
   border-radius: 0px !important;
