--- a/UI/assets/styles/home.css
+++ b/UI/assets/styles/home.css
@@ -30,12 +30,17 @@
   }
 }
 
+#terminal {
+  max-height: 20rem;
+  height: 20rem;
+}
+
 .sostene-terminal {
-  font-weight: 200;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
   transition: 0.2s ease-in-out;
-  min-height: 20rem;
+  height: 100%;
   background-color: var(--color-black);
   width: 100%;
   border-radius: 1rem;
@@ -85,6 +90,7 @@
   padding: 0.8rem 1rem;
 }
 .sostene-terminal .terminal-body {
+  overflow-y: scroll;
   padding: 0px 1rem;
   flex: 1;
   display: flex;
@@ -112,6 +118,7 @@
 }
 .sostene-terminal .terminal-input {
   font-family: inherit;
+  min-height: 2em;
 }
 .sostene-terminal .terminal-input,
 .sostene-terminal .terminal-input:active,
@@ -123,6 +130,8 @@
   outline: none;
   border-radius: 0px !important;
   font-size: 1rem;
+  height: auto;
+  margin: 0px;
 }
 
 #headline .headline {
